--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "test": "vitest"
   },
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -28,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "jsdom": "^26.0.0",
+    "prettier": "3.5.0",
     "vite": "^6.0.5",
     "vitest": "^3.0.4"
   }
